--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,7 +4,7 @@
   font-family: Lato sans-serif 300;
   align-content: center;
   font-size: 20px;
-  
+  height: auto;
 
   width: 100%;
   text-align: center;
