--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -8,10 +8,11 @@
 .cards {
   font-family: Lato sans-serif 300;
   padding: 30px;
-  margin-top: 150px;
+  margin-top: 250px;
   width: 450px;
   height: 500px;
   background-color: #23232aad;
+  text-align: center;
   img{
     max-width: 350px;
     margin: auto;
