--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -9,7 +9,7 @@
 }
 
 .card-partner {
-  width: 300px;
+ 
   margin-top: 100px;
   border: none;
   height: 400px;
@@ -20,17 +20,20 @@
   .card-text {
     text-align: center;
   }
+  .btn{
+    justify-self: center;
+  }
   .btn-button {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 50px;
     border: 1px solid gray;
-    align-self: center;
+    
     width: 80%;
     position: absolute;
     bottom: 0;
-    left: 4%;
+    
     font-size: 21px;
     color: gray;
     &:hover{
