--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,16 +4,16 @@
   font-family: Lato sans-serif 300;
   align-content: center;
   font-size: 20px;
-  height: auto;
-
+  height: 180px;
   width: 100%;
   text-align: center;
+  
 
   img {
-    width: 50px;
+    width: 45px;
     margin: 30px;
-    &:hover{
-        width: 40px;
+    &:hover {
+      width: 40px;
     }
   }
 }
